.provarCaches/00D5f000005vwGkEAI/objects/rstk__processlog__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_processlog</customHelpPage>
    <description>processlog__c</description>
    <fields>
        <fullName>rstk__batchexecstartedmillis__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis04 - Batch Exec Started</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__batchfinishmillis__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis05 - Batch Finish</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__batchstartedmillis__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis03 - Batch Started</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__batchsubmittedmillis__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis01 - Batch Submitted</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__batchthreadsused__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Batch Threads</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__begintime__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Time Begin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__capture__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Capture</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Status - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__data__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__endtime__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Time End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__errormessage__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Message - Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__errormessagelong__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Message - Error (Long)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__errorrecord__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Error Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__errorstack__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Message - Error Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__execfinishmillis__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis06 - Exec Finish</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__executecalledmillis__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis02 - Execute Called</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Z_Obsolete</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_execcalledtofinish__c</fullName>
        <formula>IF(rstk__execfinishmillis__c &gt; 0 &amp;&amp; rstk__executecalledmillis__c &gt; 0, ( rstk__execfinishmillis__c - rstk__executecalledmillis__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis4 - Exec Called To Finish</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_exectofinish__c</fullName>
        <formula>IF((rstk__isbatch__c || rstk__isqueueable__c) &amp;&amp; rstk__batchfinishmillis__c &gt; 0 &amp;&amp; rstk__batchexecstartedmillis__c &gt; 0, ( rstk__batchfinishmillis__c - rstk__batchexecstartedmillis__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis3 - Batch Exec To Finish</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Z_Obsolete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Z_Obsolete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_starttoexec__c</fullName>
        <formula>IF((rstk__isbatch__c || rstk__isqueueable__c) &amp;&amp; rstk__batchexecstartedmillis__c &gt; 0 &amp;&amp; rstk__batchstartedmillis__c &gt; 0, ( rstk__batchexecstartedmillis__c - rstk__batchstartedmillis__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis2 - Batch Start To Exec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_submittostart__c</fullName>
        <formula>IF((rstk__isbatch__c || rstk__isqueueable__c) &amp;&amp; rstk__batchstartedmillis__c &gt; 0 &amp;&amp; rstk__batchsubmittedmillis__c &gt; 0, ( rstk__batchstartedmillis__c -  rstk__batchsubmittedmillis__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Millis1 - Batch Submit To Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__herokuaction__c</fullName>
        <label>Heroku Action</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__input__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Parameters - Input</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__isHeroku__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate Heroku run of the record</description>
        <inlineHelpText>To indicate Heroku run of the record</inlineHelpText>
        <label>Heroku Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__isbatch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Process - Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__isdebug__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Debug Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iserror__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Status - Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__isqueueable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process - Queueable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__jobid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__jobids__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Apex Job IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__log__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__output__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Parameters - Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__runby__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Run By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ZZ_Processlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Z_Obsolete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__status__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Message - Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__substatus__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>Message - Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to SYDATA</description>
        <label>SYDATA - System Transaction Object</label>
        <referenceTo>rstk__sydata__c</referenceTo>
        <relationshipLabel>ZZ_Processlogs</relationshipLabel>
        <relationshipName>sydata_processlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ_Processlogs</relationshipLabel>
        <relationshipName>ZZ_Processlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Z_Obsolete</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__uikey__c</fullName>
        <inlineHelpText>This is for Rootstock debug and tracing only</inlineHelpText>
        <label>UI Key</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__warningmessage__c</fullName>
        <label>Message - Warning</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ZZ_Processlog</label>
    <listViews>
        <fullName>rstk__All3</fullName>
        <columns>NAME</columns>
        <columns>rstk__begintime__c</columns>
        <columns>rstk__endtime__c</columns>
        <columns>rstk__status__c</columns>
        <columns>rstk__runby__c</columns>
        <columns>rstk__iserror__c</columns>
        <columns>rstk__completed__c</columns>
        <columns>rstk__output__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Processlogs</fullName>
        <columns>NAME</columns>
        <columns>rstk__begintime__c</columns>
        <columns>rstk__endtime__c</columns>
        <columns>rstk__status__c</columns>
        <columns>rstk__runby__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__iserror__c</columns>
        <columns>rstk__completed__c</columns>
        <columns>rstk__output__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Processlogs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Processlogs_Recent</fullName>
        <columns>NAME</columns>
        <columns>rstk__begintime__c</columns>
        <columns>rstk__endtime__c</columns>
        <columns>rstk__status__c</columns>
        <columns>rstk__runby__c</columns>
        <columns>rstk__iserror__c</columns>
        <columns>rstk__batchstartedmillis__c</columns>
        <columns>rstk__batchfinishmillis__c</columns>
        <columns>rstk__errormessage__c</columns>
        <columns>rstk__errormessagelong__c</columns>
        <columns>rstk__completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Processlogs-Recent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__SAMB</fullName>
        <columns>NAME</columns>
        <columns>rstk__begintime__c</columns>
        <columns>rstk__endtime__c</columns>
        <columns>rstk__status__c</columns>
        <columns>rstk__runby__c</columns>
        <columns>rstk__iserror__c</columns>
        <columns>rstk__completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>bhongale</value>
        </filters>
        <label>SAMB</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ_Processlogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>